# f1-cuda-simulation

./: .gitignore  CMakeLists.txt  INDEX.md  Makefile  README.md  REPO_CONTENTS.txt  SETUP_GUIDE.md  Silverstone.csv  cuda_arch.cmake  main.py  requirements.txt  sac.py  test.py  visualize_trajectory.py
logs/: episode_0_traj.csv  episode_10_traj.csv  episode_11_traj.csv  episode_12_traj.csv  episode_13_traj.csv  episode_14_traj.csv  episode_15_traj.csv  episode_16_traj.csv  episode_17_traj.csv  episode_18_traj.csv  episode_19_traj.csv  episode_1_traj.csv  episode_20_traj.csv  episode_21_traj.csv  episode_22_traj.csv  episode_23_traj.csv  episode_24_traj.csv  episode_25_traj.csv  episode_26_traj.csv  episode_27_traj.csv  episode_28_traj.csv  episode_29_traj.csv  episode_2_traj.csv  episode_30_traj.csv  episode_31_traj.csv  episode_32_traj.csv  episode_33_traj.csv  episode_34_traj.csv  episode_35_traj.csv  episode_36_traj.csv  episode_37_traj.csv  episode_38_traj.csv  episode_39_traj.csv  episode_3_traj.csv  episode_40_traj.csv  episode_41_traj.csv  episode_42_traj.csv  episode_43_traj.csv  episode_44_traj.csv  episode_45_traj.csv  (+62 more)
logs/.mplconfig/: fontlist-v330.json
src/: main.cpp  sac.h
src/parallel/: batch_processor.cu  batch_processor.h  episode_manager.cu  episode_manager.h
src/sac/: network.cu  network.h  sac_cuda.cu  sac_cuda.h
src/simulation/: car.cu  car.h  physics.cu  physics.h  track.cu  track.h
src/utils/: cuda_utils.cu  cuda_utils.h  logging.h  math_utils.h
